Fix loading .kpp files with embedded top-level resources

The patch fixes multiple issues with loading embedded (side-loaded) resources
from the .kpp files:

1) Side-loaded resources were **never** loaded (since the very beginning of 5.0),
    because `reader.text("embedded_resources").toInt()` was read from a wrong
    place. The number of resources is stored in XML data, not in the PNG's metadata
    field.

    Now Krita doesn't check the resource count at all and just iterates over the XML to
    find "resource" elements.

2) A new KoResource::sideLoadedResources() method is introduced. It returns a one-time-
    available resources which are loaded alongside the main resource. These side-loaded
    resources can be expelled from memory by calling clearSideLoadedResources(), which
    is called by KisResourceLocator right after loading the resources into the memory.

3) KisResourceLocator now calls loadRequiredResources() in all code paths that load the
    resource into memory (to make sure all its embedded resources are loaded). Previously
    it required a Krita restart to load the embedded resources, cause it happened only during
    the normal lazy-loading.

4) Fixed KisEmbeddedTextureData::loadLinkedPattern() to return FailedLink resource
    instead of invalid EmbeddedResource, when the actual "patternBase64" tag is missing
    (it is missing in 5.0 version of the presets)

5) Adds a unittest that checks all these peculiarities (see KisPaintOpPresetTest)

NOTE:
Bug 456197 is "kind of fixed" with this patch, because side-loaded resources are now
loaded correctly. Though the problem may still be valid for other resource types that
do not side-load the dependencies.

BUG:487866
BUG:456586
BUG:456197