libs/image/brushengine/kis_paintop_preset.h
@@ -226,6 +226,9 @@ public:
 
     QList<KoResourceLoadResult> embeddedResources(KisResourcesInterfaceSP globalResourcesInterface) const override;
 
+    QList<KoResourceLoadResult> sideLoadedResources(KisResourcesInterfaceSP globalResourcesInterface) const;
+    void clearSideLoadedResources();
+
     QList<int> requiredCanvasResources() const override;
 
     /**
